--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/policies.yaml
@@ -25,7 +25,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (VMs within IPs 10.0.0.0/24 and VMs not within IPs 10.0.0.0/30) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'src: (segment seg_2-3 and not in segment seg_1) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1005"
     creationTimestamp: null
     name: policy-1
@@ -37,10 +37,10 @@ spec:
                 cidr: 0.0.0.0/0
     podSelector:
         matchExpressions:
-            - key: VMs_within_IPs__10.0.0.0-24
+            - key: to-NLCimplement
               operator: Exists
-            - key: VMs_within_IPs__10.0.0.0-30
-              operator: DoesNotExist
+            - key: to-NLCimplement
+              operator: Exists
     policyTypes:
         - Egress
 ---
@@ -48,7 +48,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'dup of src: (VMs within IPs 10.0.0.0/24 and VMs not within IPs 10.0.0.0/30) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'dup of src: (segment seg_2-3 and not in segment seg_1) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1005"
     creationTimestamp: null
     name: policy-2
@@ -59,10 +59,10 @@ spec:
             - podSelector: {}
     podSelector:
         matchExpressions:
-            - key: VMs_within_IPs__10.0.0.0-24
+            - key: to-NLCimplement
               operator: Exists
-            - key: VMs_within_IPs__10.0.0.0-30
-              operator: DoesNotExist
+            - key: to-NLCimplement
+              operator: Exists
     policyTypes:
         - Egress
 ---
@@ -70,7 +70,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (VMs within IPs 10.0.0.0/24 and VMs not within IPs 10.0.0.0/30) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'src: (segment seg_2-3 and not in segment seg_1) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1005"
     creationTimestamp: null
     name: policy-3
@@ -80,10 +80,10 @@ spec:
         - from:
             - podSelector:
                 matchExpressions:
-                    - key: VMs_within_IPs__10.0.0.0-24
+                    - key: to-NLCimplement
                       operator: Exists
-                    - key: VMs_within_IPs__10.0.0.0-30
-                      operator: DoesNotExist
+                    - key: to-NLCimplement
+                      operator: Exists
     podSelector: {}
     policyTypes:
         - Ingress
@@ -92,7 +92,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'src: (segment seg-6-7 and not in segment seg_4-5) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1007"
     creationTimestamp: null
     name: policy-4
@@ -104,10 +104,10 @@ spec:
                 cidr: 0.0.0.0/0
     podSelector:
         matchExpressions:
-            - key: VMs_within_IPs__10.0.0.0-16
+            - key: to-NLCimplement
               operator: Exists
-            - key: VMs_within_IPs__10.0.0.0-20
-              operator: DoesNotExist
+            - key: to-NLCimplement
+              operator: Exists
     policyTypes:
         - Egress
 ---
@@ -115,7 +115,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'dup of src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'dup of src: (segment seg-6-7 and not in segment seg_4-5) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1007"
     creationTimestamp: null
     name: policy-5
@@ -126,10 +126,10 @@ spec:
             - podSelector: {}
     podSelector:
         matchExpressions:
-            - key: VMs_within_IPs__10.0.0.0-16
+            - key: to-NLCimplement
               operator: Exists
-            - key: VMs_within_IPs__10.0.0.0-20
-              operator: DoesNotExist
+            - key: to-NLCimplement
+              operator: Exists
     policyTypes:
         - Egress
 ---
@@ -137,7 +137,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (VMs within IPs 10.0.0.0/16 and VMs not within IPs 10.0.0.0/20) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'src: (segment seg-6-7 and not in segment seg_4-5) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "1007"
     creationTimestamp: null
     name: policy-6
@@ -147,10 +147,10 @@ spec:
         - from:
             - podSelector:
                 matchExpressions:
-                    - key: VMs_within_IPs__10.0.0.0-16
+                    - key: to-NLCimplement
                       operator: Exists
-                    - key: VMs_within_IPs__10.0.0.0-20
-                      operator: DoesNotExist
+                    - key: to-NLCimplement
+                      operator: Exists
     podSelector: {}
     policyTypes:
         - Ingress
@@ -159,7 +159,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (VMs within IPs 172.16.10.10/16) dst: (IP addr in 0.0.0.0/0 and group != real-group) conn: All Connections'
+        description: 'src: (segment seg-8) dst: (IP addr in 0.0.0.0/0 and group != real-group) conn: All Connections'
         nsx-id: "2200"
     creationTimestamp: null
     name: policy-7
@@ -173,7 +173,7 @@ spec:
                       operator: DoesNotExist
     podSelector:
         matchExpressions:
-            - key: VMs_within_IPs__172.16.10.10-16
+            - key: to-NLCimplement
               operator: Exists
     policyTypes:
         - Egress
@@ -182,7 +182,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (VMs within IPs 172.16.10.10/16) dst: (IP addr in 0.0.0.0/0 and group != real-group) conn: All Connections'
+        description: 'src: (segment seg-8) dst: (IP addr in 0.0.0.0/0 and group != real-group) conn: All Connections'
         nsx-id: "2200"
     creationTimestamp: null
     name: policy-8
@@ -192,7 +192,7 @@ spec:
         - from:
             - podSelector:
                 matchExpressions:
-                    - key: VMs_within_IPs__172.16.10.10-16
+                    - key: to-NLCimplement
                       operator: Exists
     podSelector:
         matchExpressions:
@@ -205,7 +205,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'src: (segment seg-9-10) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
     name: policy-9
@@ -217,7 +217,7 @@ spec:
                 cidr: 0.0.0.0/0
     podSelector:
         matchExpressions:
-            - key: VMs_within_IPs__192.168.0.0-16
+            - key: to-NLCimplement
               operator: Exists
     policyTypes:
         - Egress
@@ -226,7 +226,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'dup of src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'dup of src: (segment seg-9-10) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
     name: policy-10
@@ -237,7 +237,7 @@ spec:
             - podSelector: {}
     podSelector:
         matchExpressions:
-            - key: VMs_within_IPs__192.168.0.0-16
+            - key: to-NLCimplement
               operator: Exists
     policyTypes:
         - Egress
@@ -246,7 +246,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (VMs within IPs 192.168.0.0/16) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
+        description: 'src: (segment seg-9-10) dst: (IP addr in 0.0.0.0/0) conn: All Connections'
         nsx-id: "3000"
     creationTimestamp: null
     name: policy-11
@@ -256,7 +256,7 @@ spec:
         - from:
             - podSelector:
                 matchExpressions:
-                    - key: VMs_within_IPs__192.168.0.0-16
+                    - key: to-NLCimplement
                       operator: Exists
     podSelector: {}
     policyTypes:
@@ -266,7 +266,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (group = real-group and VMs not within IPs 10.0.0.0/20 and VMs not within IPs 172.16.10.10/16) dst: (group = real-group) conn: All Connections'
+        description: 'src: (group = real-group and not in segment seg_4-5 and not in segment seg-8) dst: (group = real-group) conn: All Connections'
         nsx-id: "4008"
     creationTimestamp: null
     name: policy-12
@@ -282,10 +282,10 @@ spec:
         matchExpressions:
             - key: group__real-group
               operator: Exists
-            - key: VMs_within_IPs__10.0.0.0-20
-              operator: DoesNotExist
-            - key: VMs_within_IPs__172.16.10.10-16
-              operator: DoesNotExist
+            - key: to-NLCimplement
+              operator: Exists
+            - key: to-NLCimplement
+              operator: Exists
     policyTypes:
         - Egress
 ---
@@ -293,7 +293,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (group = real-group and VMs not within IPs 10.0.0.0/20 and VMs not within IPs 172.16.10.10/16) dst: (group = real-group) conn: All Connections'
+        description: 'src: (group = real-group and not in segment seg_4-5 and not in segment seg-8) dst: (group = real-group) conn: All Connections'
         nsx-id: "4008"
     creationTimestamp: null
     name: policy-13
@@ -305,10 +305,10 @@ spec:
                 matchExpressions:
                     - key: group__real-group
                       operator: Exists
-                    - key: VMs_within_IPs__10.0.0.0-20
-                      operator: DoesNotExist
-                    - key: VMs_within_IPs__172.16.10.10-16
-                      operator: DoesNotExist
+                    - key: to-NLCimplement
+                      operator: Exists
+                    - key: to-NLCimplement
+                      operator: Exists
     podSelector:
         matchExpressions:
             - key: group__real-group
