--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowMixedSegments/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowMixedSegments/policies.yaml
@@ -106,8 +106,8 @@ spec:
         matchExpressions:
             - key: VMs_within_IPs__10.0.0.0-16
               operator: Exists
-            - key: to-NLCimplement
-              operator: Exists
+            - key: in_Segment__seg_4-5
+              operator: DoesNotExist
     policyTypes:
         - Egress
 ---
@@ -128,8 +128,8 @@ spec:
         matchExpressions:
             - key: VMs_within_IPs__10.0.0.0-16
               operator: Exists
-            - key: to-NLCimplement
-              operator: Exists
+            - key: in_Segment__seg_4-5
+              operator: DoesNotExist
     policyTypes:
         - Egress
 ---
@@ -149,8 +149,8 @@ spec:
                 matchExpressions:
                     - key: VMs_within_IPs__10.0.0.0-16
                       operator: Exists
-                    - key: to-NLCimplement
-                      operator: Exists
+                    - key: in_Segment__seg_4-5
+                      operator: DoesNotExist
     podSelector: {}
     policyTypes:
         - Ingress
@@ -409,8 +409,8 @@ spec:
         matchExpressions:
             - key: group__real-group
               operator: Exists
-            - key: to-NLCimplement
-              operator: Exists
+            - key: in_Segment__seg_4-5
+              operator: DoesNotExist
             - key: VMs_within_IPs__172.16.10.10-16
               operator: DoesNotExist
     policyTypes:
@@ -432,8 +432,8 @@ spec:
                 matchExpressions:
                     - key: group__real-group
                       operator: Exists
-                    - key: to-NLCimplement
-                      operator: Exists
+                    - key: in_Segment__seg_4-5
+                      operator: DoesNotExist
                     - key: VMs_within_IPs__172.16.10.10-16
                       operator: DoesNotExist
     podSelector:
