--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsExternalAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsExternalAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -51,6 +51,11 @@ spec:
           to:
             - networks:
                 - 0.0.0.0/0
+            - pods:
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
+                podSelector: {}
     priority: 2
     subject:
         pods:
@@ -83,6 +88,11 @@ spec:
           to:
             - networks:
                 - 0.0.0.0/0
+            - pods:
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
+                podSelector: {}
     priority: 3
     subject:
         pods:
@@ -111,6 +121,11 @@ spec:
           to:
             - networks:
                 - 0.0.0.0/0
+            - pods:
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
+                podSelector: {}
     priority: 4
     subject:
         pods:
@@ -128,10 +143,41 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
+        description: '(jump_to_application: (src: (IP addr in 0.0.0.0/0) dst: (group = Dumbledore) conn: All Connections)'
+        nsx-id: "10221"
+    creationTimestamp: null
+    name: admin-policy-4
+spec:
+    ingress:
+        - action: Pass
+          from:
+            - pods:
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
+                podSelector: {}
+          ports: null
+    priority: 5
+    subject:
+        pods:
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
+            podSelector:
+                matchExpressions:
+                    - key: group__Dumbledore
+                      operator: Exists
+status:
+    conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
         description: '(deny: (src: (*) dst: (IP addr in 0.0.0.0/0) conn: All Connections)'
         nsx-id: "10300"
     creationTimestamp: null
-    name: admin-policy-4
+    name: admin-policy-5
 spec:
     egress:
         - action: Deny
@@ -139,7 +185,12 @@ spec:
           to:
             - networks:
                 - 0.0.0.0/0
-    priority: 5
+            - pods:
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
+                podSelector: {}
+    priority: 6
     subject:
         pods:
             namespaceSelector:
@@ -156,7 +207,7 @@ metadata:
         description: '(deny: (src: (*) dst: (IP addr in 0.0.0.0/0) conn: All Connections)'
         nsx-id: "10300"
     creationTimestamp: null
-    name: admin-policy-5
+    name: admin-policy-6
 spec:
     ingress:
         - action: Deny
@@ -167,7 +218,7 @@ spec:
                         kubernetes.io/metadata.name: default
                 podSelector: {}
           ports: null
-    priority: 6
+    priority: 7
     subject:
         pods:
             namespaceSelector:
