--- a/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegmentsFiltered_NoHint_Filtered/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegmentsFiltered_NoHint_Filtered/pods.yaml
@@ -6,7 +6,7 @@ metadata:
         VMs_within_IPs__0.0.1.0-25: "true"
         group__default-group: "true"
     name: A
-    namespace: default
+    namespace: seg_a_and_b
 spec:
     containers: null
 status: {}
@@ -19,7 +19,7 @@ metadata:
         VMs_within_IPs__0.0.1.128-25: "true"
         group__default-group: "true"
     name: B
-    namespace: default
+    namespace: seg_a_and_b
 spec:
     containers: null
 status: {}
