--- a/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegments_NoHint/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegments_NoHint/policies.yaml
@@ -38,11 +38,11 @@ spec:
           to:
             - podSelector:
                 matchExpressions:
-                    - key: to-NLCimplement
+                    - key: VMs_within_IPs__0.0.1.128-25
                       operator: Exists
     podSelector:
         matchExpressions:
-            - key: to-NLCimplement
+            - key: VMs_within_IPs__0.0.1.0-25
               operator: Exists
     policyTypes:
         - Egress
@@ -61,14 +61,14 @@ spec:
         - from:
             - podSelector:
                 matchExpressions:
-                    - key: to-NLCimplement
+                    - key: VMs_within_IPs__0.0.1.0-25
                       operator: Exists
           ports:
             - port: 445
               protocol: TCP
     podSelector:
         matchExpressions:
-            - key: to-NLCimplement
+            - key: VMs_within_IPs__0.0.1.128-25
               operator: Exists
     policyTypes:
         - Ingress
@@ -90,11 +90,11 @@ spec:
           to:
             - podSelector:
                 matchExpressions:
-                    - key: to-NLCimplement
+                    - key: in_Segment__seg_c
                       operator: Exists
     podSelector:
         matchExpressions:
-            - key: to-NLCimplement
+            - key: VMs_within_IPs__0.0.1.128-25
               operator: Exists
     policyTypes:
         - Egress
@@ -113,14 +113,14 @@ spec:
         - from:
             - podSelector:
                 matchExpressions:
-                    - key: to-NLCimplement
+                    - key: VMs_within_IPs__0.0.1.128-25
                       operator: Exists
           ports:
             - port: 443
               protocol: TCP
     podSelector:
         matchExpressions:
-            - key: to-NLCimplement
+            - key: in_Segment__seg_c
               operator: Exists
     policyTypes:
         - Ingress
