--- a/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegments_NoHint/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegments_NoHint/policies.yaml
@@ -2,34 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: Network Policy To Allow Access To DNS Server
-        nsx-id: none
-    creationTimestamp: null
-    name: dns-policy
-    namespace: default
-spec:
-    egress:
-        - ports:
-            - port: 53
-              protocol: UDP
-          to:
-            - namespaceSelector: {}
-              podSelector:
-                matchLabels:
-                    k8s-app: kube-dns
-    podSelector: {}
-    policyTypes:
-        - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
         description: 'src: (VMs within IPs 0.0.1.0/25) dst: (VMs within IPs 0.0.1.128/25) conn: TCP dst-ports: 445'
         nsx-id: "1004"
     creationTimestamp: null
-    name: policy-1
-    namespace: default
+    name: policy-0
+    namespace: seg_a_and_b
 spec:
     egress:
         - ports:
@@ -54,8 +31,8 @@ metadata:
         description: 'src: (VMs within IPs 0.0.1.0/25) dst: (VMs within IPs 0.0.1.128/25) conn: TCP dst-ports: 445'
         nsx-id: "1004"
     creationTimestamp: null
-    name: policy-2
-    namespace: default
+    name: policy-1
+    namespace: seg_a_and_b
 spec:
     ingress:
         - from:
@@ -80,8 +57,8 @@ metadata:
         description: 'src: (VMs within IPs 0.0.1.128/25) dst: (segment seg_c) conn: TCP dst-ports: 443'
         nsx-id: "1005"
     creationTimestamp: null
-    name: policy-3
-    namespace: default
+    name: policy-2
+    namespace: seg_a_and_b
 spec:
     egress:
         - ports:
@@ -106,8 +83,8 @@ metadata:
         description: 'src: (VMs within IPs 0.0.1.128/25) dst: (segment seg_c) conn: TCP dst-ports: 443'
         nsx-id: "1005"
     creationTimestamp: null
-    name: policy-4
-    namespace: default
+    name: policy-3
+    namespace: seg_c
 spec:
     ingress:
         - from:
@@ -124,6 +101,36 @@ spec:
               operator: Exists
     policyTypes:
         - Ingress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: Default Deny Network Policy
+        nsx-id: "1003"
+    creationTimestamp: null
+    name: default-deny
+    namespace: seg_a_and_b
+spec:
+    podSelector: {}
+    policyTypes:
+        - Ingress
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: Default Deny Network Policy
+        nsx-id: "1003"
+    creationTimestamp: null
+    name: default-deny
+    namespace: seg_c
+spec:
+    podSelector: {}
+    policyTypes:
+        - Ingress
+        - Egress
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
